# aarch64_interpreter

./: CMakeLists.txt  README.md
examples/: hello_world.asm  simple.asm
src/: CMakeLists.txt  main.c
src/processor/: CMakeLists.txt  alu_instructions.c  alu_instructions.h  central_processing_unit.c  central_processing_unit.h  instructions.c  instructions.h  registers.c  registers.h
src/program/: CMakeLists.txt  instruction.c  instruction.h  operand.c  operand.h  program.c  program.h
test/: requirements.md
